--- a/examples/darkelf_migdal.ipynb
+++ b/examples/darkelf_migdal.ipynb
@@ -542,7 +542,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7ffc3bdae7d0>"
+       "<matplotlib.legend.Legend at 0x7f9c3afe6b10>"
       ]
      },
      "execution_count": 15,
@@ -638,7 +638,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7ffc3e2550d0>"
+       "<matplotlib.legend.Legend at 0x7f9c3d3de190>"
       ]
      },
      "execution_count": 17,
@@ -926,8 +926,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculated R=3.3203626285877914 in 12.500983953475952 seconds.\n",
-      "Calculated R=3.3858454520801833 in 0.14402413368225098 seconds.\n"
+      "Calculated R=3.3203626285877914 in 11.522921085357666 seconds.\n",
+      "Calculated R=3.3858454520801833 in 0.12733697891235352 seconds.\n"
      ]
     }
    ],
@@ -959,8 +959,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculated R=3.871821831554962 in 123.98340821266174 seconds.\n",
-      "Calculated R=3.9482005954571675 in 102.9305408000946 seconds.\n"
+      "Calculated R=3.871821831554962 in 106.14537119865417 seconds.\n",
+      "Calculated R=3.9482005954571675 in 96.60149717330933 seconds.\n"
      ]
     }
    ],
@@ -1522,6 +1522,13 @@
     "\n",
     "fig.savefig(plotdir+\"darkelf_migdal_5.pdf\",bbox_inches='tight')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
