simplifications and adding comments to code to get Fn(omega)

--- a/examples/darkelf_multiphonons.ipynb
+++ b/examples/darkelf_multiphonons.ipynb
@@ -65,7 +65,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When loading the materials, the \"dos_filename\" flag must be set in order to calculate rates in the multiphonon regime. The \"target_yaml\" flag is set automatically and can be overridden. Auxiliary functions \"Fn\" are pre-tabulated corresponding to the given density of states files and loaded in by default. If using another density of states, one must first run the \"create_Fn_omega()\" function on the desired density of states."
+    "When loading the materials, the \"dos_filename\" flag must be set in order to calculate rates in the multiphonon regime. The \"target_yaml\" flag is set automatically and can be overridden. Auxiliary functions \"Fn\" are pre-tabulated corresponding to the given density of states files and loaded in by default. \n",
+    "\n",
+    "If starting with a new density of states, one must run the 'create_Fn_omega()' function. This defaults to creating the Fn functions corresponding to the density of states loaded in in the instantiation of the class. This can take an hour or two."
    ]
   },
   {
@@ -102,7 +104,7 @@
     }
    ],
    "source": [
-    "targets.files('Si')\n"
+    "targets.files('Si')"
    ]
   },
   {
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
