--- a/examples/darkelf_electron.ipynb
+++ b/examples/darkelf_electron.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,20 +105,17 @@
      "output_type": "stream",
      "text": [
       "Available configuration files: \n",
-      "\t Si.yaml\n",
+      "\t GaAs.yaml\n",
       " \n",
       "Available data for epsilon: \n",
-      "\t Si_Migdal_FAC.dat\n",
-      "\t Si_mermin.dat\n",
-      "\t Si_gpaw_noLFE.dat\n",
-      "\t Si_gpaw_withLFE.dat\n",
-      "\t Si_epsphonon_theory6K.dat\n",
-      "\t Si_epsphonon_data6K.dat\n"
+      "\t GaAs_Zion.dat\n",
+      "\t GaAs_mermin.dat\n",
+      "\t GaAs_epsphonon_data10K.dat\n"
      ]
     }
    ],
    "source": [
-    "targets.files('Si')"
+    "targets.files('GaAs')"
    ]
   },
   {
@@ -141,40 +138,61 @@
      "text": [
       " .... Loading files for Si\n",
       "Loaded Si_gpaw_withLFE.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from J. Enkovaara et al.,Electronic structure calculations with GPAW: a real-space implementation of the projector augmented-wave method,Journal of Physics:Condensed Matter22(2010) 253202.\n",
       "Warning! eps for phonon frequencies not loaded. Need to set phonon_filename \n",
+      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n",
       " .... Loading files for Si\n",
       "Loaded Si_mermin.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from Y. Sun, H. Xu, B. Da, S.-f. Mao and Z.-j. Ding, Calculations of Energy-Loss Function for 26 Materials, Chinese Journal of Chemical Physics9(2016) 663.\n",
       "Warning! eps for phonon frequencies not loaded. Need to set phonon_filename \n",
+      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n",
       " .... Loading files for Ge\n",
       "Loaded Ge_gpaw_withLFE.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from J. Enkovaara et al.,Electronic structure calculations with GPAW: a real-space implementation of the projector augmented-wave method,Journal of Physics:Condensed Matter22(2010) 253202.\n",
       "Warning! eps for phonon frequencies not loaded. Need to set phonon_filename \n",
+      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n",
       " .... Loading files for Ge\n",
       "Loaded Ge_mermin.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from M. Nov ́ak, L. K ̈ov ́er, S. Egri, I. Cserny, J. T ́oth, D. Varga et al., A simple statistical model for quantitative analysis of plasmon structures in xps and auger spectra of free-electron-like materials,Journal ofElectron Spectroscopy and Related Phenomena163(2008) 7\n",
       "Warning! eps for phonon frequencies not loaded. Need to set phonon_filename \n",
+      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n",
       " .... Loading files for GaAs\n",
       "Loaded GaAs_mermin.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from Y. Tu, C. Kwei and C. Tung,Angular and energy dependences of the surface excitation parameter for semiconducting iii–v compounds, Surface Science601(2007) 865.\n",
       "Warning! eps for phonon frequencies not loaded. Need to set phonon_filename \n",
       "Warning! Atomic Migdal calculation not present\n",
+      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n",
       " .... Loading files for GaN\n",
       "Loaded GaN_mermin.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from Y. Tu, C. Kwei and C. Tung,Angular and energy dependences of the surface excitation parameter for semiconducting iii–v compounds, Surface Science601(2007) 865.\n",
       "Warning! eps for phonon frequencies not loaded. Need to set phonon_filename \n",
       "Warning! Atomic Migdal calculation not present\n",
+      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n",
       " .... Loading files for Al\n",
       "Loaded Al_mermin.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from Y. Sun, H. Xu, B. Da, S.-f. Mao and Z.-j. Ding, Calculations of Energy-Loss Function for 26 Materials, Chinese Journal of Chemical Physics9(2016) 663.\n",
       "Warning! eps for phonon frequencies not loaded. Need to set phonon_filename \n",
       "Warning! Atomic Migdal calculation not present\n",
+      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n",
       " .... Loading files for SiO2\n",
       "Loaded SiO2_mermin.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from Y. Sun, H. Xu, B. Da, S.-f. Mao and Z.-j. Ding, Calculations of Energy-Loss Function for 26 Materials, Chinese Journal of Chemical Physics9(2016) 663.\n",
       "Warning! eps for phonon frequencies not loaded. Need to set phonon_filename \n",
       "Warning! Atomic Migdal calculation not present\n",
+      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n",
       " .... Loading files for ZnS\n",
       "Loaded ZnS_mermin.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from Y. Sun, H. Xu, B. Da, S.-f. Mao and Z.-j. Ding, Calculations of Energy-Loss Function for 26 Materials, Chinese Journal of Chemical Physics9(2016) 663.\n",
       "Warning! eps for phonon frequencies not loaded. Need to set phonon_filename \n",
       "Warning! Atomic Migdal calculation not present\n",
+      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n",
       " .... Loading files for Al2O3\n",
       "Loaded Al2O3_mermin.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from Y. Sun, H. Xu, B. Da, S.-f. Mao and Z.-j. Ding, Calculations of Energy-Loss Function for 26 Materials, Chinese Journal of Chemical Physics9(2016) 663.\n",
+      "phonon ELF taken or calculated from  F. Gervais and B. Piriou, Anharmonicity in several-polar-mode crystals:  adjusting phonon self-energy of LO and TO modes in Al2O3 and TiO2 to fit infrared reflectivity,Journal of Physics C Solid State Physics 7 (1974) 2374 and M. Schubert, T.E. Tiwald and C.M. Herzinger, Infrared dielectric anisotropy and phonon modes of sapphire, Phys. Rev. B61(2000) 8187\n",
       "Loaded Al2O3_epsphonon_o.dat for epsilon in phonon regime\n",
-      "Warning! Atomic Migdal calculation not present\n"
+      "Warning! Atomic Migdal calculation not present\n",
+      "Warning! Momentum Zion not loaded. Using Z - number of valence electrons.\n"
      ]
     }
    ],
@@ -203,6 +221,26 @@
     "Al2O3 = darkelf(target='Al2O3',mX=mX,filename=\"Al2O3_mermin.dat\",phonon_filename=\"Al2O3_epsphonon_o.dat\") \n",
     "\n",
     "target_list=[Al,Al2O3,GaAs,GaN,Ge,Si,SiO2,ZnS]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.57"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ge_gpaw.e0+Ge_gpaw.E_gap"
    ]
   },
   {
