--- a/examples/darkelf_multiphonons.ipynb
+++ b/examples/darkelf_multiphonons.ipynb
@@ -337,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Custom Momentum-dependent coupling (Dark Photon"
+    "# Custom Momentum-dependent coupling (Dark Photon)"
    ]
   },
   {
