update before meeting

--- a/examples/darkelf_multiphonons.ipynb
+++ b/examples/darkelf_multiphonons.ipynb
@@ -65,12 +65,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When loading the materials, the \"dos_filename\" flag must be set in order to calculate rates in the multiphonon regime. The \"target_yaml\" flag is set automatically and can be overridden. Auxiliary functions \"Fn\" are pre-tabulated corresponding to the given density of states files and loaded in by default. If using another density of states, one must first run the \"create_Fn_omega()\" function on the desired density of states."
+    "When loading the materials, the \"dos_filename\" flag specifies the density of states that is being used for the calculation. It must be set in order to calculate rates in the multiphonon regime. DarkELF comes with one or more tabulated DOS files for each material. The user can add their own by simply adding the tabulated DOS to the folder of the material in question. In polyatomic materials, sometimes the partial density of states is provided for each atom. In this case, the \"dos_filename\" flag accepts a list of filenames, one for each partial density of states. (See GaAs example below.)\n",
+    "\n",
+    "\n",
+    "The multiphonon rate is computed with pretabulated auxiliary functions \"Fn\", to increase the computation speed. The default \"Fn\" functions are calculated for the default density of states provided with darkELF. If using your own density of states, you must first run the \"create_Fn_omega()\" function on the desired density of states to recompute these pretabulated functions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,16 +84,17 @@
       "\t GaAs.yaml\n",
       " \n",
       "Available data for epsilon: \n",
-      "\t GaAs_Zion.dat\n",
       "\t GaAs_mermin.dat\n",
-      "\t Ga_pDOS.dat\n",
-      "\t As_pDOS.dat\n",
+      "\t Ga_atomic_Zion.dat\n",
+      "\t As_atomic_Zion.dat\n",
       "\t GaAs_epsphonon_data10K.dat\n",
       " \n",
       "Available data for phonon density of states: \n",
       "\t GaAs_DoS.dat\n",
       " \n",
       "Available data for phonon partial density of states: \n",
+      "\t Ga_pDoS.dat\n",
+      "\t As_pDoS.dat\n",
       " \n",
       "Available data for Fn(omega) functions: \n",
       "\t As_Fn.dat\n",
@@ -102,44 +106,56 @@
     }
    ],
    "source": [
-    "targets.files('GaAs')\n"
+    "targets.files('GaAs')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is referring to the effective charge right?\n",
+    "\n",
     "If one is only interested in the multiphonon response, the electronic response specified with the \"filename\" flag is not used. If it is not specified, the code will produce a warning message, as seen below. There's also an optional form_factor_filename if one is interested in using a custom DM-atomic form factor. These can be ignored as long as we only care about DM-multiphonon scattering. Let's load a few materials."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "GaAs_mermin.dat\n",
       " .... Loading files for GaAs\n",
-      "Warning! Epsilon grid in electron regime does not exist.\n",
+      "Loaded GaAs_mermin.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from Y. Tu, C. Kwei and C. Tung,Angular and energy dependences of the surface excitation parameter for semiconducting iii–v compounds, Surface Science601(2007) 865.\n",
       "Warning! eps for phonon frequencies not loaded. Need to set phonon_filename \n",
       "Warning! Atomic Migdal calculation not present\n",
+      "Warning! Momentum Zion not loaded. Using Z - number of valence electrons.\n",
       "Loaded Ga_pDoS.dat and As_pDoS.dat for partial densities of states\n",
       "Loaded Fn(omega) functions corresponding to density of states in:  Ga_pDoS.dat   As_pDoS.dat\n",
       "Warning! Dark photon fd not loaded. fd_darkphoton must be list of two filenames\n",
+      "------\n",
+      "Si_gpaw_withLFE.dat\n",
       " .... Loading files for Si\n",
-      "Warning! Epsilon grid in electron regime does not exist.\n",
+      "Loaded Si_gpaw_withLFE.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from J. Enkovaara et al.,Electronic structure calculations with GPAW: a real-space implementation of the projector augmented-wave method,Journal of Physics:Condensed Matter22(2010) 253202.\n",
       "Warning! eps for phonon frequencies not loaded. Need to set phonon_filename \n",
+      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n",
       "Loaded Si_DoS.dat for density of states\n",
       "Loaded Fn(omega) functions corresponding to density of states in:  Si_DoS.dat\n",
-      "Warning! Dark photon fd not loaded. Need to set fd_filename if needed. Otherwise defaults to massive mediator \n"
+      "Warning! Dark photon fd not loaded. Need to set fd_filename if needed. Otherwise defaults to massive mediator \n",
+      "------\n"
      ]
     }
    ],
    "source": [
     "gaas = darkelf(target='GaAs',dos_filename=[\"Ga_pDoS.dat\",\"As_pDoS.dat\"])\n",
-    "si = darkelf(target='Si',dos_filename=\"Si_DoS.dat\")\n"
+    "print(\"------\")\n",
+    "si = darkelf(target='Si',dos_filename=\"Si_DoS.dat\")\n",
+    "print(\"------\")"
    ]
   },
   {
@@ -571,6 +587,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Updating the pretabulated functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The user can update the pretabulated function with their own density of states, using the \"create_Fn_omega\" function. This is rather slow and should be avoided if possible."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -762,13 +792,7 @@
       "Finished point #250 out of 750 for 4 phonons\n",
       "Finished point #300 out of 750 for 4 phonons\n",
       "Finished point #350 out of 750 for 4 phonons\n",
-      "Finished point #400 out of 750 for 4 phonons\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Finished point #400 out of 750 for 4 phonons\n",
       "Finished point #450 out of 750 for 4 phonons\n",
       "Finished point #500 out of 750 for 4 phonons\n",
       "Finished point #550 out of 750 for 4 phonons\n",
@@ -891,7 +915,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -905,7 +929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
