--- a/examples/darkelf_multiphonons.ipynb
+++ b/examples/darkelf_multiphonons.ipynb
@@ -627,7 +627,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -641,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
