modified example notebook
Added code snippet for computing sigma_mod for R_BG of 1/g-day and 1/g-hr. Added text files with precomputed curves for 9 panel plot in example notebook darkelf_daily_modulation.ipynb. Added data for constraints from current experiments in examples/data/.

--- a/examples/darkelf_daily_modulation.ipynb
+++ b/examples/darkelf_daily_modulation.ipynb
@@ -83,9 +83,7 @@
       "electronic ELF taken or calculated from J. Enkovaara et al.,Electronic structure calculations with GPAW: a real-space implementation of the projector augmented-wave method,Journal of Physics:Condensed Matter22(2010) 253202.\n",
       "phonon ELF taken or calculated from M. Ikezawa and M. Ishigame, Far-Infrared AbsorptionDue to the Two-Phonon Difference Process in Si, Journal of the Physical Society of Japan 50(1981) 3734.\n",
       "Loaded Si_epsphonon_data6K.dat for epsilon in phonon regime\n",
-      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n",
-      "Loaded /Users/ConnorsComputer/Documents/GitHub/DarkELF/examples/../darkelf/../data/Si/Si_pDoS.dat for partial densities of states\n",
-      "Loaded /Users/ConnorsComputer/Documents/GitHub/DarkELF/examples/../darkelf/../data/Si/Si_Fn.dat for Fn(omega)\n"
+      "Zion(k) for Migdal calculation taken or calculated from: P. J. Brown, A. G. Fox, E. N. Maslen, M. A. OKeefe,and B. T. M. Willis, “Intensity of diffracted intensities,” in International Tables for Crystallography (American Cancer Society, 2006) Chap. 6.1, pp. 554–595, https://onlinelibrary.wiley.com/doi/pdf/10.1107/97809553602060000\n"
      ]
     },
     {
@@ -100,6 +98,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loaded /Users/ConnorsComputer/Documents/GitHub/DarkELF/examples/../darkelf/../data/Si/Si_pDoS.dat for partial densities of states\n",
+      "Loaded /Users/ConnorsComputer/Documents/GitHub/DarkELF/examples/../darkelf/../data/Si/Si_Fn.dat for Fn(omega)\n",
       "Loaded /Users/ConnorsComputer/Documents/GitHub/DarkELF/examples/../darkelf/../data/Si/Si_pDoS_anisotropic.dat for partial densities of states\n",
       "Si_pDoS_anisotropic.dat\n",
       "/Users/ConnorsComputer/Documents/GitHub/DarkELF/examples/../darkelf/../data/Si/Si_Fn.npy\n",
@@ -670,7 +670,33 @@
     "    print(f'{(end-start)} seconds for mass value {m}')\n",
     "\n",
     "np.savetxt('daily_differential_A_mod_al2o3_massive_scalar.dat',modulation_fraction_al2o3_omega_dR)\n",
-    "########################################################"
+    "########################################################\n",
+    "### Computing sigma_mod for R_BG = 1/g-day and 1/g-hr\n",
+    "\n",
+    "num_points = 30\n",
+    "mass_DM_values = np.logspace(6,9,num_points)\n",
+    "\n",
+    "energy = np.array([120e-3,200e-3,500e-3,1])\n",
+    "\n",
+    "sigma_mod_gram_day = np.zeros((num_points,len(energy)))\n",
+    "sigma_mod_gram_hr = np.zeros((num_points,len(energy)))\n",
+    "\n",
+    "for i,mass in enumerate(mass_DM_values):\n",
+    "    al2o3.update_params(mX=mass,mediator='massive')\n",
+    "\n",
+    "    time_array = np.linspace(0,24,10)\n",
+    "    rates = np.array([[al2o3.R_multiphonons_anisotropic(t,e) for e in energy]for t in time_array])\n",
+    "    avg_rate = np.trapz(rates,time_array,axis=0)/24\n",
+    "    rate_max = rates[0]\n",
+    "    A_mod = np.abs(rate_max - avg_rate)/avg_rate\n",
+    "    N_ev_gd = (2/A_mod**2) * (1 + np.sqrt(1 + (A_mod**2 * 1000*365)))\n",
+    "    N_ev_gh = (2/A_mod**2) * (1 + np.sqrt(1 + (A_mod**2 * 1000*365*24)))\n",
+    "\n",
+    "    sigma_mod_gram_day[i] = N_ev_gd * 1e-38/avg_rate\n",
+    "    sigma_mod_gram_hr[i] = N_ev_gh * 1e-38/avg_rate\n",
+    "\n",
+    "np.savetxt('Al2O3_Heavy_Scalar/sigma_mod_gram_day.dat',sigma_mod_gram_day)\n",
+    "np.savetxt('Al2O3_Heavy_Scalar/sigma_mod_gram_hr.dat',sigma_mod_gram_hr)\n"
    ]
   },
   {
@@ -683,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -698,20 +724,20 @@
     }
    ],
    "source": [
-    "modulation_fraction_Al2O3_e_thresh_dR= np.loadtxt('data/Al2O3_Heavy_Scalar/daily_differential_A_mod_al2o3_massive_scalar.dat')\n",
-    "Al2O3_daily_rate_modulation= np.loadtxt('data/Al2O3_Heavy_Scalar/daily_mod_curve_al2o3_massive_scalar.dat')\n",
+    "modulation_fraction_Al2O3_e_thresh_dR= np.loadtxt('data/daily_differential_A_mod_al2o3_massive_scalar.txt')\n",
+    "Al2O3_daily_rate_modulation= np.loadtxt('data/daily_mod_curve_al2o3_massive_scalar.txt')\n",
     "\n",
-    "sigma_n_Al2O3 = np.loadtxt('data/Al2O3_Heavy_Scalar/sigma_n_al2o3_massive_scalar.dat').T\n",
-    "sigma_n_modulation_Al2O3 = np.loadtxt('data/Al2O3_Heavy_Scalar/sigma_n_mod_al2o3_massive_scalar.dat').T\n",
-    "sigma_n_Al2O3_iso =np.loadtxt('data/Al2O3_Heavy_Scalar/sigma_n_iso_al2o3_massive_scalar.dat').T\n",
-    "modulation_fraction_Al2O3_mass = np.loadtxt('data/Al2O3_Heavy_Scalar/R(0)_over_average_R_mass_Al2O3_massive_scalar.dat')\n",
+    "sigma_n_Al2O3 = np.loadtxt('data/sigma_n_al2o3_massive_scalar.txt').T\n",
+    "sigma_n_modulation_Al2O3 = np.loadtxt('data/sigma_n_mod_al2o3_massive_scalar.txt').T\n",
+    "sigma_n_Al2O3_iso =np.loadtxt('data/sigma_n_iso_al2o3_massive_scalar.txt').T\n",
+    "modulation_fraction_Al2O3_mass = np.loadtxt('data/R(0)_over_average_R_mass_Al2O3_massive_scalar.txt')\n",
     "\n",
-    "sigma_mod_g_day = np.loadtxt('data/Al2O3_Heavy_Scalar/sigma_mod_gram_day.dat').T\n",
-    "sigma_mod_g_hr = np.loadtxt('data/Al2O3_Heavy_Scalar/sigma_mod_gram_hr.dat').T\n",
+    "sigma_mod_g_day = np.loadtxt('data/sigma_mod_gram_day.txt').T\n",
+    "sigma_mod_g_hr = np.loadtxt('data/sigma_mod_gram_hr.txt').T\n",
     "\n",
-    "dR_domega_al2o3_massive_scalar = np.loadtxt('data/Al2O3_Heavy_Scalar/dR_domega_al2o3_massive_scalar.dat')\n",
+    "dR_domega_al2o3_massive_scalar = np.loadtxt('data/dR_domega_al2o3_massive_scalar.txt')\n",
     "\n",
-    "massive_scalar_contraints = np.loadtxt('data/Al2O3_Heavy_Scalar/heavy_mediator_constraints.dat').T\n",
+    "massive_scalar_contraints = np.loadtxt('data/heavy_mediator_constraints.txt').T\n",
     "##################################################################################################\n",
     "fig,ax = plt.subplots(3,2,figsize=(13,15),layout='constrained')\n",
     "\n",
