modify nuclear recoil keyword usage, correct typo in gp over gn, and adding various comments/questions in spin dep part

--- a/examples/darkelf_multiphonons_spin_independent.ipynb
+++ b/examples/darkelf_multiphonons_spin_independent.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -748,9 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "because GaAs is diatomic crystal, we specified both files a list as an argument to \"dos_filename\". Note that the definition of the object produces a warning if it doesn't find the Fn files, indicating that the user should run \"create_Fn_omega\", as below. The option \"npoints\" indicat the number of points in the grid that is generated; we recommend at least npoints=750 for good accuracy. Since this is step rather slow, we will here run with npoints=20 for illustrative purposes. (This grid should NOT be used for physics calculations.)\n",
-    "\n",
-    "The code will spit out a status update if it completed a particular final state."
+    "because GaAs is diatomic crystal, we specified both files a list as an argument to \"dos_filename\". Note that the definition of the object produces a warning if it doesn't find the Fn files, indicating that the user should run \"create_Fn_omega\", as below."
    ]
   },
   {
