establish pyproject.taml with uv for dependency management

--- a/examples/darkelf_multiphonons_spin_independent.ipynb
+++ b/examples/darkelf_multiphonons_spin_independent.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -887,6 +887,79 @@
     "print(gaas_test.sigma_multiphonons_SI(0.05))\n",
     "print(gaas.sigma_multiphonons_SI(0.05))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " .... Loading files for Al2O3\n",
+      "Loaded Al2O3_mermin.dat for epsilon in electron regime\n",
+      "electronic ELF taken or calculated from Y. Sun, H. Xu, B. Da, S.-f. Mao and Z.-j. Ding, Calculations of Energy-Loss Function for 26 Materials, Chinese Journal of Chemical Physics9(2016) 663.\n",
+      "phonon ELF taken or calculated from  F. Gervais and B. Piriou, Anharmonicity in several-polar-mode crystals:  adjusting phonon self-energy of LO and TO modes in Al2O3 and TiO2 to fit infrared reflectivity,Journal of Physics C Solid State Physics 7 (1974) 2374 and M. Schubert, T.E. Tiwald and C.M. Herzinger, Infrared dielectric anisotropy and phonon modes of sapphire, Phys. Rev. B61(2000) 8187\n",
+      "Loaded Al2O3_epsphonon_o.dat for epsilon in phonon regime\n",
+      "Warning, Al2O3_eps_electron_opticallimit.dat does not exist! dielectric function in optical limit not loaded. Needed for absorption calculations in superconductors.\n",
+      "Warning! Atomic Migdal calculation not present\n",
+      "Warning! Momentum dependent Zion for Migdal calculation not loaded. Using Z - number of valence electrons.\n",
+      "Loaded /Users/tongyan/Dropbox/Projects/DarkELF/examples/../darkelf/../data/Al2O3/Al_pDoS.dat for partial densities of states\n",
+      "Loaded /Users/tongyan/Dropbox/Projects/DarkELF/examples/../darkelf/../data/Al2O3/O_pDoS.dat for partial densities of states\n",
+      "Loaded /Users/tongyan/Dropbox/Projects/DarkELF/examples/../darkelf/../data/Al2O3/Al_Fn.dat for Fn(omega)\n",
+      "Loaded /Users/tongyan/Dropbox/Projects/DarkELF/examples/../darkelf/../data/Al2O3/O_Fn.dat for Fn(omega)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tongyan/Dropbox/Projects/DarkELF/examples/../darkelf/epsilon.py:44: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  data.fillna(inplace=True,method='bfill')# fill in some NaN values\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded /Users/tongyan/Dropbox/Projects/DarkELF/examples/../darkelf/../data/Al2O3/Al2O3_pDoS_anisotropic.dat for partial densities of states\n",
+      "Al2O3_pDoS_anisotropic.dat\n",
+      "/Users/tongyan/Dropbox/Projects/DarkELF/examples/../darkelf/../data/Al2O3/Al2O3_Fn.npy\n",
+      "Loaded Al2O3_Fn_anisotropic.npy for Fn(omega)\n"
+     ]
+    }
+   ],
+   "source": [
+    "al2o3 = darkelf(target='Al2O3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result saved in /Users/tongyan/Dropbox/Projects/DarkELF/examples/../darkelf/../data/Al2O3/Al_Fn.dat\n",
+      "result saved in /Users/tongyan/Dropbox/Projects/DarkELF/examples/../darkelf/../data/Al2O3/O_Fn.dat\n",
+      "Loaded /Users/tongyan/Dropbox/Projects/DarkELF/examples/../darkelf/../data/Al2O3/Al_Fn.dat for Fn(omega)\n",
+      "Loaded /Users/tongyan/Dropbox/Projects/DarkELF/examples/../darkelf/../data/Al2O3/O_Fn.dat for Fn(omega)\n"
+     ]
+    }
+   ],
+   "source": [
+    "al2o3.create_Fn_omega(phonons=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -905,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
